--- a/css/styles.css
+++ b/css/styles.css
@@ -571,14 +571,47 @@ img {
    text-align: center;
    letter-spacing: 0.02em;
    color: #2E2F42;
+   margin-bottom: 16px;
 }
 
 .modal-input {
    width: 100%;
    height: 40px;
-   border: 1px solid #4D5AE5;
+   border: 1px solid rgba(33, 33, 33, 0.2);;
    border-radius: 4px;
-   margin-bottom: 22px;
+   outline: transparent;
+   padding-left: 16px;
+}
+
+.modal-input:focus, .modal-comment:focus {
+   border-color: var(--accent-color);
+}
+
+.modal-input:focus + .modal-input-icon {
+   fill: var(--accent-color);
+}
+
+.modal-input::placeholder,  .modal-comment::placeholder {
+   font-family: 'Roboto';
+   font-size: 12px;
+   line-height: 16px;
+   letter-spacing: 0.04em;
+   color: rgba(117, 117, 117, 0.5);
+}
+
+.input-wrap {
+   position: relative;
+}
+
+.modal-input-text {
+   margin-bottom: 88px;
+}
+
+.modal-input-icon {
+   position: absolute;
+   left: 16px;
+   top: 50%;
+   transform: translateY(-50%);
 }
 
 .modal-input-text span {
@@ -588,4 +621,14 @@ img {
    letter-spacing: 0.04em;
    color: #8E8F99;
    margin-bottom: 4px;
+   display: block;
+}
+
+.modal-comment {
+   width: 100%;
+   height: 120px;
+   border: 1px solid rgba(33, 33, 33, 0.2);
+   border-radius: 4px;
+   padding: 8px 16px;
+   resize: none;
 }
