--- a/css/styles.css
+++ b/css/styles.css
@@ -632,3 +632,31 @@ img {
    padding: 8px 16px;
    resize: none;
 }
+
+.check-text {
+   font-family: 'Roboto';
+   font-size: 12px;
+   line-height: 16px;
+   letter-spacing: 0.04em;
+   color: #757575;
+   display: flex;
+}
+
+.check-text span {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 16px;
+   height: 16px;
+   border: 1.25px solid #2E2F42;
+   border-radius: 2px;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   fill: transparent;
+}
+
+.modal-check:checked + .check-text span {
+   background-color: #404BBF;
+   border: none;
+   fill: #F4F4FD;
+}
+
