--- a/css/styles.css
+++ b/css/styles.css
@@ -475,6 +475,10 @@ img {
    height: 72px;
 }
 
+.footer-soc-content {
+   margin-right: 80px;
+}
+
 .footer-soc-title {
    font-weight: 500;
    line-height: var(--text-lh);
@@ -509,6 +513,49 @@ img {
    background-color: #31D0AA;
 }
 
+.footer-input-title {
+   font-weight: 500;
+   line-height: var(--text-lh);
+   letter-spacing: 0.02em;
+   color:  #FFFFFF;
+   margin-bottom: 16px;
+}
+.footer-submit {
+   display: flex;
+}
+
+.footer-input {
+   width: 264px;
+   height: 40px;
+   border: 1px solid rgba(255, 255, 255, 0.3);
+   border-radius: 4px;
+   padding-left: 16px;
+   background-color: transparent;
+   margin-right: 24px;
+}
+
+.footer-input:focus {
+   border-color: #4D5AE5;
+}
+
+.footer-btn {
+   font-family: 'Roboto';
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 24px;
+   letter-spacing: 0.04em;
+   color: #FFFFFF;
+   cursor: pointer;
+   width: 165px;
+   height: 40px;
+   border-color: transparent;
+   background-color: #4D5AE5;
+   border-radius: 4px;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+
 /* Modal */
 .backdrop {
    position: fixed;
@@ -541,6 +588,10 @@ img {
 
 .backdrop.is-hidden .modal {
    transform: translate(-50%, 50%) scaleY(0);
+}
+
+.modal-form {
+   text-align: center;
 }
 
 .modal-close {
@@ -660,3 +711,28 @@ img {
    fill: #F4F4FD;
 }
 
+.checkbox-span{
+   margin-right: 8px;
+}
+
+.modal-btn {
+   font-family: inherit;
+   font-weight: 500;
+   font-size: 16px;
+   line-height: var(--link-btn-lh);
+   color: var(--lite-color);
+   cursor: pointer;
+   width: 169px;
+   height: 56px;
+   background: var(--accent-color);
+   background: #4D5AE5;
+   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+   border-radius: 4px;
+   border-color: transparent;
+   margin-top: 24px;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn:is(:hover, :focus) {
+   background-color: #404BBF;
+}
