--- a/css/styles.css
+++ b/css/styles.css
@@ -27,10 +27,6 @@ img {
    text-decoration: none;
 }
 
-.btn {
-   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .container {
    max-width: 1158px;
    padding: 0 15px;
@@ -530,8 +526,10 @@ img {
    border: 1px solid rgba(255, 255, 255, 0.3);
    border-radius: 4px;
    padding-left: 16px;
+   color: #FFFFFF;
    background-color: transparent;
    margin-right: 24px;
+   outline: transparent;
 }
 
 .footer-input:focus {
@@ -539,21 +537,29 @@ img {
 }
 
 .footer-btn {
-   font-family: 'Roboto';
+   font-family: inherit;
    font-weight: 500;
    font-size: 16px;
-   line-height: 24px;
-   letter-spacing: 0.04em;
-   color: #FFFFFF;
+   line-height: var(--link-btn-lh);
+   color: var(--lite-color);
    cursor: pointer;
    width: 165px;
    height: 40px;
-   border-color: transparent;
-   background-color: #4D5AE5;
+   background: var(--accent-color);
+   background: #4D5AE5;
+   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
    border-radius: 4px;
+   fill: #FFFFFF;
+   display: flex;
+   justify-content: space-between;
+   padding: 8px 24px;
+   border-color: transparent;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.footer-btn:is(:hover, :focus) {
+   background-color: #404BBF;
+}
 
 
 /* Modal */
@@ -590,10 +596,6 @@ img {
    transform: translate(-50%, 50%) scaleY(0);
 }
 
-.modal-form {
-   text-align: center;
-}
-
 .modal-close {
    width: 24px;
    height: 24px;
@@ -625,13 +627,17 @@ img {
    margin-bottom: 16px;
 }
 
+.input-item {
+   margin-bottom: 8px;
+}
+
 .modal-input {
    width: 100%;
    height: 40px;
    border: 1px solid rgba(33, 33, 33, 0.2);
    border-radius: 4px;
    outline: transparent;
-   padding-left: 16px;
+   padding-left: 38px;
 }
 
 .modal-input:focus, .modal-comment:focus {
@@ -652,10 +658,6 @@ img {
 
 .input-wrap {
    position: relative;
-}
-
-.modal-input-text {
-   margin-bottom: 8px;
 }
 
 .modal-input-icon {
@@ -705,6 +707,10 @@ img {
    fill: transparent;
 }
 
+.modal-checkbox {
+   margin-top: 16px;
+}
+
 .modal-check:checked + .check-text span {
    background-color: #404BBF;
    border: none;
@@ -729,7 +735,7 @@ img {
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
    border-radius: 4px;
    border-color: transparent;
-   margin-top: 24px;
+   margin: 24px 95px;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
