--- a/css/styles.css
+++ b/css/styles.css
@@ -588,7 +588,7 @@ img {
    background: #FCFCFC;
    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
    border-radius: 4px;
-   padding: 24px;
+   padding: 72px 24px 24px;
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -597,18 +597,18 @@ img {
 }
 
 .modal-close {
+   position: absolute;
+   top: 24px;
+   right: 24px;
    width: 24px;
    height: 24px;
    border-radius: 50%;
    background-color: #E7E9FC;
    border: 1px solid rgba(0, 0, 0, 0.1);
-   display: block;
-   margin-left: auto;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
-   margin-bottom: 24px;
 }
 
 .modal-icon {
@@ -631,6 +631,10 @@ img {
    margin-bottom: 8px;
 }
 
+.input-caption {
+   margin-bottom: 4px;
+}
+
 .modal-input {
    width: 100%;
    height: 40px;
@@ -638,6 +642,7 @@ img {
    border-radius: 4px;
    outline: transparent;
    padding-left: 38px;
+   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus, .modal-comment:focus {
@@ -665,19 +670,23 @@ img {
    left: 16px;
    top: 50%;
    transform: translateY(-50%);
+   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input-text span {
-   font-family: 'Roboto';
    font-size: 12px;
    line-height: 16px;
    letter-spacing: 0.04em;
    color: #8E8F99;
-   margin-bottom: 4px;
    display: block;
 }
 
+.modal-input-text:first-child {
+   margin-bottom: 4px;
+}
+
 .modal-comment {
+   display: block;
    width: 100%;
    height: 120px;
    border: 1px solid rgba(33, 33, 33, 0.2);
@@ -687,7 +696,6 @@ img {
 }
 
 .check-text {
-   font-family: 'Roboto';
    font-size: 12px;
    line-height: 16px;
    letter-spacing: 0.04em;
@@ -732,7 +740,7 @@ img {
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
    border-radius: 4px;
    border-color: transparent;
-   margin: 24px 95px;
+   margin: 24px 95px 0 95px;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
