--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@ img {
    --gra: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7));
    --text-lh: 1.2;
    --link-btn-lh: 1.5;
+   --transform-function: 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 
@@ -91,7 +92,7 @@ img {
    line-height: var(--link-btn-lh);
    letter-spacing: 0.02em;
    color: var(--main-color);
-   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: color var(--transform-function);
 }
 
 .curent {
@@ -120,7 +121,7 @@ img {
    line-height: var(--link-btn-lh);
    letter-spacing: 0.02em;
    color: var(--minor-color);
-   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: color var(--transform-function);
 }
 
 .nav-link:hover, .contact-link:hover, .nav-link:focus, .contact-link:focus {
@@ -165,7 +166,7 @@ img {
    border-color: transparent;
    border-radius: 4px;
    margin-top: 48px;
-   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: background-color var(--transform-function);
 }
 
 .hero-btn:is(:hover, :focus) {
@@ -293,7 +294,7 @@ img {
    justify-content: center;
    background-color: var(--accent-color);
    border-radius: 50%;
-   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+   transition: background-color var(--transform-function); 
 }
 
 .team-soc-link:is(:hover, :focus) {
@@ -321,7 +322,7 @@ img {
    justify-content: center;
    border: 1px solid #8E8F99;
    border-radius: 4px;
-   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: border-color var(--transform-function);
 }
 .customers-link:is(:hover, :focus) {
    border-color: var(--accent-color);
@@ -329,7 +330,7 @@ img {
 
 .customers-icon {
    fill: #AFB1B8;
-   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: fill var(--transform-function);
 }
 .customers-link:is(:hover, :focus) .customers-icon{
    fill: #404BBF;
@@ -361,7 +362,7 @@ img {
    border: 1px solid #E7E9FC;
    border-radius: 4px;
    cursor: pointer;
-   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: color var(--transform-function), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow var(--transform-function);
 }
 
 .filters-btn:is(:hover, :focus) {
@@ -390,7 +391,7 @@ img {
 
 .project-card-link {
    display: inline-block;
-   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: box-shadow var(--transform-function);
 }
 
 .project-card-link:is(:hover, :focus) {
@@ -415,7 +416,7 @@ img {
    color: #F4F4FD;
    background-color: var(--accent-color);
    transform: translateY(100%);
-   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: transform var(--transform-function);
    overflow: auto;
 }
 
@@ -502,7 +503,7 @@ img {
    justify-content: center;
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 50%;
-   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: background-color var(--transform-function);
 }
 
 .footer-soc-link:is(:hover, :focus) {
@@ -554,7 +555,7 @@ img {
    justify-content: space-between;
    padding: 8px 24px;
    border-color: transparent;
-   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: background-color var(--transform-function);
 }
 
 .footer-btn:is(:hover, :focus) {
@@ -569,7 +570,7 @@ img {
    width: 100%;
    height: 100%;
    background-color: rgba(46, 47, 66, 0.4);
-   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: opacity var(--transform-function), visibility var(--transform-function);
 }
 
 .is-hidden {
@@ -589,7 +590,7 @@ img {
    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
    border-radius: 4px;
    padding: 72px 24px 24px;
-   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: transform var(--transform-function);
 }
 
 .backdrop.is-hidden .modal {
@@ -642,7 +643,7 @@ img {
    border-radius: 4px;
    outline: transparent;
    padding-left: 38px;
-   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: border-color var(--transform-function);
 }
 
 .modal-input:focus, .modal-comment:focus {
@@ -670,7 +671,7 @@ img {
    left: 16px;
    top: 50%;
    transform: translateY(-50%);
-   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: fill var(--transform-function);
 }
 
 .modal-input-text span {
@@ -711,7 +712,7 @@ img {
    height: 16px;
    border: 1.25px solid #2E2F42;
    border-radius: 2px;
-   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: background-color var(--transform-function);
    fill: transparent;
    margin-right: 8px;
 }
@@ -741,7 +742,7 @@ img {
    border-radius: 4px;
    border-color: transparent;
    margin: 24px 95px 0 95px;
-   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: background-color var(--transform-function);
 }
 
 .modal-btn:is(:hover, :focus) {
